--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -341,6 +341,15 @@ video {
   /* z-index: -1; */
 }
 
+.overlay img {
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden; */
+  object-fit: cover;
+  position: fixed;
+  /* z-index: -1; */
+}
+
 .line {
   background: #131313;
   height: 5px;
