added new projects and fixed some about me's

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -252,6 +252,14 @@
   width: 23%
 }
 
+.skills-content .right .api::before{
+  width: 40%
+}
+
+.skills-content .right .db::before {
+  width: 35%
+}
+
 .title-right {
   margin-top: -100px;
   margin-bottom: 20px;
